update feature Root CA
